@@ -11,6 +11,7 @@ Legend:
 next version - not released yet
 ===============================
 + Ticket #3873, Display tooltip with H/W decoder name on hover over status message
+! Ticket #2870, Fix rare visual glitches on status bar 
 ! Ticket #3881, DXVA status was invalid with certain decoders
 
 
